@@ -18,8 +18,8 @@ Latest Stable Release (<b>2.2.5</b>):
 
 <li>
 Latest Beta Release (<b>2.3.30</b>):
-<a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.3.30.tar.gz">tar.gz</a>,
-<a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.3.30.tar.bz2">tar.bz2</a></li>
+<a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.3.31.tar.gz">tar.gz</a>,
+<a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.3.31.tar.bz2">tar.bz2</a></li>
 
 <li>
 Latest Alpha Versions:
