@@ -17,7 +17,7 @@
 <h3><font color="yellow">NEWS FLASH!</font></h3>
 <p>
 <!--FVWM 2.4.0, an official release, is now available for download!-->
-FVWM 2.3.30, a stable candidate release is now available for download!
+FVWM 2.3.31, a stable candidate release is now available for download!
 </blockquote>
 <hr>
 
