@@ -1,3 +1,7 @@
+2001-04-08  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* download.html, index.html: News Flash, download 2.3.31.
+
 2001-03-30  Mikhael Goikhman  <migo@homemail.com>
 
 	* download.html: replaced rpm link
